kubernetes/uptime-kuma/overlays/okd/route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/instance: uptime-kuma
  annotations:
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  rules:
    - host: uptime.apps.okd.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: uptime-kuma-service
                port:
                  name: http
